--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -48,6 +48,7 @@ dependencies:
   path_provider: ^2.0.11
   device_info: ^2.0.3
   loading_indicator: ^3.1.0
+  multiple_result: ^4.0.0
 
 dev_dependencies:
   flutter_test:
