--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -49,6 +49,9 @@ dependencies:
   device_info: ^2.0.3
   loading_indicator: ^3.1.0
   multiple_result: ^4.0.0
+  firebase_messaging: ^14.2.1
+  firebase_core: ^2.4.1
+  flutter_local_notifications: ^13.0.0
 
 dev_dependencies:
   flutter_test:
@@ -77,6 +80,7 @@ flutter:
     - assets/salary.png
     - assets/coin.png
     - assets/logo.png
+    - assets/logo-two.png
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
