--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -52,6 +52,7 @@ dependencies:
   firebase_messaging: ^14.2.1
   firebase_core: ^2.4.1
   flutter_local_notifications: ^13.0.0
+  easy_localization: ^3.0.1
 
 dev_dependencies:
   flutter_test:
@@ -77,10 +78,14 @@ flutter:
 
   # To add assets to your application, add an assets section, like this:
   assets:
+    - assets/translations/
     - assets/salary.png
     - assets/coin.png
     - assets/logo.png
     - assets/logo-two.png
+    - assets/gb.png
+    - assets/tz.png
+  
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
